# InoDAQ

./: Makefile  README.md
InoDAQ/src/ino/: digital_pin_handler.cpp  ino.ino  parser.cpp  parser.h  payload_handler.cpp  payload_handler.h
src/cpp/: CMakeLists.txt  commands.cpp  commands.h  control_panel.cpp  control_panel.h  interface.cpp  interface.h  logging.cpp  logging.h  main.cpp  serial.cpp  serial.h
src/cpp/src/: CMakeLists.txt  commands.cpp  commands.h  control_panel.cpp  control_panel.h  logging.h  main.cpp  serial.cpp
src/cpp/tests/: conftest.py  pytest.ini  test_presentation_layer.py
src/ino/: Makefile  digital_pin_handler.cpp  digital_pin_handler.h  ino.ino  led_builtin.cpp  led_builtin.h  parser.cpp  parser.h  send_message.cpp  send_message.h  test_serial.py
src/ino/src/: commands.cpp  commands.h  core.cpp  core.h
src/ino/tests/: conftest.py  serial_connection.py  test_hardware_control_layer.py  test_serial_connection.py
src/ino2/: digital_pin_handler.h  ino.ino  led_builtin.cpp  led_builtin.h  parser.cpp  send_message.cpp
test/: test_serial.py
